--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -211,6 +211,7 @@
       }
       .search-input {
         width: 100%;
+        height: 38px;
         font-family: $font-family-sans-serif !important;
         border-color: $search-form-border-color;
         border-radius: 100px;
@@ -374,6 +375,14 @@
         .checkout-name {
           color: $brand-color-green;
         }
+      }
+    }
+    .clickable {
+      .checkout-num {
+        cursor: pointer;
+      }
+      .checkout-name {
+        cursor: pointer;
       }
     }
   }
