--- a/assets/css/storefront/components/_forms.scss
+++ b/assets/css/storefront/components/_forms.scss
@@ -20,7 +20,12 @@
 }
 
 .radio {
-  margin-bottom: $global-margin / 2;
+  padding-top: $global-margin / 2;
+  padding-bottom: $global-margin / 2;
+  border-bottom: 1px solid $gray-color-2;
+  &:last-child {
+    border-bottom: none;
+  }
   ul {
     list-style: none;
     padding-left: 0;
@@ -28,13 +33,26 @@
   input {
     display: inline-block;
     vertical-align: top;
-    margin: $global-margin / 4 $global-margin / 2 0 0;
+    margin: 0 $global-margin / 2 0 0;
   }
   span, .address-details {
     display: inline-block;
   }
   label {
     margin-right: $global-margin;
+    height: 56px;
+    line-height: 56px;
+    margin-bottom: inherit;
+    span {
+      margin-right: 16px;
+    }
+    img {
+      height: 28px;
+      margin-right: 4px;
+      &:last-child {
+        margin-right: none;
+      }
+    }
   }
 }
 
@@ -60,7 +78,7 @@ input {
   }
 }
 
-input[type=text], input[type=password], input[type=submit] {
+input[type=text], input[type=password], input[type=submit], input[type=radio] {
   height: 56px;
 }
 
