Show test card  expiry for testing

--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -161,6 +161,13 @@
     display: flex;
     flex-direction: column;
   }
+  &__payment {
+    &__method {
+      &.radio {
+        display: flex;
+      }
+    }
+  }
 }
 
 .proceed-btn-payment {
