--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -183,3 +183,8 @@
 .releaselist-box {
   padding-top: 4em;
 }
+
+.release-list-panel {
+  border-bottom: 1px solid $gray-color-2;
+  padding-bottom: 2em;
+}
