--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -74,16 +74,19 @@
 
         .slide {
           position: absolute;
-          -moz-background-size: 30%;
-          -webkit-background-size: 30%;
-          background-origin: content-box;
-          background-position: right bottom;
-          background-repeat: no-repeat;
-          background-size: auto 100%;
           white-space: normal !important;
           display: inline-block;
           width: 100%;
           height: 100%;
+          &__inner {
+            height: 100%;
+            -moz-background-size: 30%;
+            -webkit-background-size: 30%;
+            background-origin: content-box;
+            background-position: right bottom;
+            background-repeat: no-repeat;
+            background-size: auto 100%;
+          }
         }
       }
     }
