--- a/assets/css/storefront/components/_forms.scss
+++ b/assets/css/storefront/components/_forms.scss
@@ -78,7 +78,7 @@ input {
   }
 }
 
-input[type=text], input[type=password], input[type=submit], input[type=radio] {
+input[type=text], input[type=password], input[type=email], input[type=submit], input[type=radio] {
   height: 56px;
 }
 
