--- a/assets/css/storefront/components/_login.scss
+++ b/assets/css/storefront/components/_login.scss
@@ -79,6 +79,29 @@
         text-align: left;
       }
     }
+    &__btn {
+      &__login {
+        padding-left: 0px;
+        padding-right: 12px;
+        button {
+          width: 100%;
+        }
+      }
+      &__register {
+        padding-left: 12px;
+        padding-right: 0px;
+        button {
+          width: 100%;
+          background-color: white;
+          color: $brand-color-green;
+          border: 1px solid $brand-color-green;
+          text-align: center;
+          &:hover {
+            background-color: lighten($brand-color-green, 40);
+          }
+        }
+      }
+    }
   }
   &__btn-group {
     a {
