upcoming status blue

--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -75,7 +75,7 @@
       &.few {
         background-color: $brand-secondary-color-yellow;
       }
-      &.preorder {
+      &.upcoming {
         background-color: $brand-secondary-color-blue;
       }
       &.one {
