give validation feedback on address forms instead of blocking the button

--- a/assets/css/storefront/variables.scss
+++ b/assets/css/storefront/variables.scss
@@ -17,6 +17,8 @@ $brand-secondary-color-red: #FF8174;
 $brand-secondary-color-blue: #278AB3;
 $brand-secondary-color-yellow: #FFB96E;
 
+$brand-danger: $brand-secondary-color-red;
+
 $link-color: $brand-color-black;
 
 $gray-color-1: #989A98;
