--- a/assets/css/storefront/components/_forms.scss
+++ b/assets/css/storefront/components/_forms.scss
@@ -102,10 +102,6 @@ select.form-control {
     -webkit-box-shadow: 0 0 0 30px white inset;
     border-color: $brand-color-black;
   }
-  margin-right: 21px;
-  &:last-child {
-    margin-right: inherit;
-  }
   &.password {
     margin-right: inherit;
   }
@@ -117,6 +113,13 @@ select.form-control {
   flex-direction: row;
   &:last-child {
     margin-bottom: 24px;
+  }
+  &-item {
+    width: 100%;
+    margin-right: 21px;
+    &:last-child {
+      margin-right: inherit;
+    }
   }
 }
 
@@ -148,4 +151,15 @@ select.form-control {
     margin-right: 8px;
   }
 
+}
+
+.input-validation {
+  display: flex;
+  flex-direction: column;
+  .error {
+    margin-top: 11px;
+    color: $brand-secondary-color-red;
+    font-size: 12px;
+    line-height: 14px;
+  }
 }
