use select form for line quantity in cart instead of number input

--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -72,7 +72,9 @@
       }
     }
     &__quantity {
+      width: 100%;
       form {
+        width: 100%;
         display: inline-block;
         input {
           width: 4rem;
