Add shipping information circle to shopping cart

--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -50,6 +50,7 @@
           }
           &__shipping {
             margin-top: 1em;
+            display: flex;
             opacity: 0.6;
             font-size: $font-size-xs;
           }
