--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -66,6 +66,8 @@
       -webkit-border-radius: 4px;
       width: 8px;
       display: inline-flex;
+      margin-top: auto;
+      margin-bottom: auto;
       position: relative;
       bottom: 0px;
       margin-right: 4px;
