Add credit card form design

--- a/assets/css/storefront/components/_forms.scss
+++ b/assets/css/storefront/components/_forms.scss
@@ -163,3 +163,9 @@ select.form-control {
     line-height: 14px;
   }
 }
+
+.centered-form-panel {
+  max-width: 765px;
+  margin-left: auto;
+  margin-right: auto;
+}
