--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -45,6 +45,7 @@
   }
   &__content {
     border: 1px solid $gray-color-2;
+    padding: 2em;
     &__col {
       border-right: 1px solid $gray-color-2;
       padding-bottom: 48px;
@@ -246,4 +247,40 @@
 
 .proceed-btn-payment {
   margin-top: 48px !important;
+}
+
+.pay-order {
+  &__panel {
+    h3 {
+      margin-bottom: 0.5em !important;
+    }
+    label {
+      text-transform: uppercase;
+      margin-bottom: 5px;
+    }
+  }
+  &__header {
+    margin-bottom: 3em;
+  }
+  &__summary {
+    font-weight: 400;
+    font-size: 1.5rem;
+  }
+}
+
+.card-payment {
+  &__expiration {
+    display: flex;
+    flex-direction: row;
+    max-width: 250px;
+    select {
+      margin-right: 21px;
+      &:last-child {
+        margin-right: inherit;
+      }
+    }
+  }
+  .cvc {
+    width: 100px;
+  }
 }
