Put cart checkout button to front

--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -233,6 +233,7 @@
   &__bottom-bar {
     position: fixed;
     bottom: 0;
+    z-index: 50;
     width: 100%;
     background-color: white;
     padding-bottom: 1em;
