--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -236,9 +236,8 @@
     z-index: 50;
     width: 100%;
     background-color: white;
-    padding-bottom: 1em;
+    padding: $global-padding;
     margin-top: $global-margin * 2;
-    padding-right: $global-padding;
   }
   &__continue-button {
     height: 64px;
