Make Order cancelable
* Update to Bootstrap4 Beta

--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -52,7 +52,7 @@
             margin-top: 1em;
             display: flex;
             opacity: 0.6;
-            font-size: $font-size-xs;
+            font-size: $font-size-sm;
           }
         }
         small {
