--- a/assets/css/storefront/components/_genres.scss
+++ b/assets/css/storefront/components/_genres.scss
@@ -41,7 +41,7 @@
         margin-left: 3em;
         width: 200px;
         background-color: white;
-        font-size: $font-size-xs;
+        font-size: $font-size-sm;
         letter-spacing: 1px;
         border-radius: 4px;
         border: 1px solid $gray-color-2;
