--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -55,7 +55,7 @@
   display: flex;
   padding-bottom: 20px;
 
-  @include media-breakpoint-only(xl) {
+  @include media-breakpoint-up(xl) {
     height: 240px;
   }
   @include media-breakpoint-only(lg) {
