--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -3,9 +3,10 @@ a.btn {
 }
 .btn {
   transition: 0.3s;
+  padding: inherit !important;
   border-radius: $button-border-radius;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 56px;
   cursor: pointer;
   height: 56px;
   text-align: center;
