--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -5,6 +5,9 @@
     text-transform: uppercase;
     color: $skull-gray;
   }
+  h4 {
+    font-size: 1.2rem;
+  }
   &__table-header {
     background-color: $gray-color-2;
     padding-bottom: $global-padding / 2;
@@ -206,7 +209,6 @@
     }
     .btn {
       width: 200px;
-      line-height: 36px;
       margin-left: auto;
       margin-right: auto;
       font-size: $font-size-h5;
