--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -224,15 +224,17 @@
       }
       .btn {
         width: 2.3rem;
-        height: 2.3rem;
+        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
         cursor: pointer;
         border-radius: 0;
         outline: 0;
+        display: flex;
         @include transition(background, 0.3s);
         img {
+          margin: auto;
           height: 1.5rem;
           padding: $global-padding / 7;
         }
