Add password change process

--- a/assets/css/storefront/components/_login.scss
+++ b/assets/css/storefront/components/_login.scss
@@ -1,7 +1,9 @@
 .login {
   margin-top: $global-padding * 2;
+  margin-left: 0px;
+  margin-right: 0px;
   border-radius: 4px;
-  border: 1px solid $gray;
+  //border: 1px solid $gray;
   @include media-breakpoint-down(sm) {
     padding-top: 0;
   }
