--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -44,10 +44,15 @@
     }
   }
   &__content {
-    border: 1px solid $gray-color-2;
-    padding: 2em;
+    //border: 1px solid $gray-color-2;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    margin-left: 0;
+    margin-right: 0;
     &__col {
-      border-right: 1px solid $gray-color-2;
+      border-top: 1px solid $gray-color-2;
+      border-bottom: 1px solid $gray-color-2;
+      border-left: 1px solid $gray-color-2;
       padding-bottom: 48px;
       padding-left: 71px;
       padding-right: 71px;
@@ -55,7 +60,7 @@
       display: flex;
       flex-direction: column;
       &:last-child {
-        border: none;
+        border-right: 1px solid $gray-color-2;
       }
     }
   }
@@ -309,7 +314,7 @@
   }
 }
 
-.order-complete {
+.complete {
   padding-top: 80px;
   max-width: 550px;
   margin-left: auto;
@@ -333,6 +338,21 @@
     color: $brand-color-green;
     &:hover {
       text-decoration: underline;
+    }
+  }
+}
+
+.reset-password {
+  &__panel {
+    h3 {
+      //margin-top: 6rem !important;
+      margin-bottom: 2rem !important;
+    }
+    .description {
+      margin-bottom: 1rem;
+    }
+    .btn {
+      width: 100%;
     }
   }
 }
