Add order history in account view

--- a/assets/css/storefront/components/_account.scss
+++ b/assets/css/storefront/components/_account.scss
@@ -1,9 +1,24 @@
 .account {
+  h1 {
+    margin-bottom: 2rem;
+  }
+  &__nav {
+    width: 90%;
+    padding: 2rem;
+    background-color: $gray-color-2;
+    line-height: 32px;
+    .selected {
+      color: $brand-color-green;
+    }
+  }
   &__artist {
     img {
       height: 208px;
       width: 100%;
       background-color: $brand-color-green;
     }
+  }
+  &__menu-item {
+    cursor: pointer;
   }
 }
