--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -33,3 +33,5 @@
 @import "components/charts";
 @import "components/account";
 @import "components/artists";
+@import "components/tables";
+@import "components/orders";
