--- a/assets/css/storefront/components/_tables.scss
+++ b/assets/css/storefront/components/_tables.scss
@@ -1,4 +1,5 @@
 .table {
+  font-weight: normal;
   th {
     background-color: $gray-color-2;
     padding-bottom: $global-padding;
@@ -22,23 +23,32 @@
       background-color: darken(white, 3);
     }
   }
-  .close-btn {
+  .detail-btn {
     margin-left: auto;
     margin-top: auto;
     margin-bottom: auto;
-    color: white;
     border-radius: 2px;
     font-size: $font-size-sm;
-    background-color: $brand-color-black;
+    color: white;
+    opacity: 1;
+    text-shadow: none;
+    font-weight: 300;
+
     .text {
       padding: 0px 14px;
       line-height: 24px;
     }
-    &.hidden {
-      visibility: hidden;
+    &.close {
+      background-color: $brand-color-black;
+      &:hover {
+        background-color: lighten($brand-color-black, 10)
+      }
     }
-    &:hover {
-      background-color: lighten($brand-color-black, 10)
+    &.view {
+      background-color: $brand-color-green;
+      &:hover {
+        background-color: darken($brand-color-green, 10)
+      }
     }
   }
 }
