Tweak local payments design to remove a little bit of uglyness

--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -92,3 +92,12 @@ a.btn {
     cursor: not-allowed;
   }
 }
+
+.btn-pay-local {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+  img {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
