Add customer information

--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -31,7 +31,7 @@ $bestseller-item-padding: 7px;
   &__display {
     display: inline-flex;
     width: 100%;
-    //justify-content: center;
+    //justify-info: center;
     //flex-direction: column;
     img {
       width: 52px;
