Make customer info design more clean

--- a/assets/css/storefront/components/_customer-info.scss
+++ b/assets/css/storefront/components/_customer-info.scss
@@ -8,6 +8,12 @@
       margin-bottom: 1rem;
     }
   }
+  a {
+    color: $brand-color-green;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .withdrawal {
