Make backorder items cancelable and mark deleted items

--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -83,7 +83,7 @@
       &.one {
         background-color: $brand-secondary-color-yellow;
       }
-      &.out {
+      &.out, &.deleted {
         background-color: $brand-secondary-color-red;
 
       }
