--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -127,6 +127,10 @@
     h4 {
       margin-bottom: $global-padding;
     }
+    .cart-line {
+      padding-top: 4px;
+      padding-bottom: 4px;
+    }
     &__delete {
       cursor: pointer;
       background-color: $brand-secondary-color-red;
