--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -105,3 +105,13 @@ body {
     padding-left: 0px;
   }
 }
+
+.vmargin-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.hmargin-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
