--- a/assets/css/storefront/components/_tables.scss
+++ b/assets/css/storefront/components/_tables.scss
@@ -13,6 +13,7 @@
     padding-right: $global-padding * 2;
   }
   td {
+    vertical-align: inherit;
     font-size: 16px;
     line-height: 32px;
   }
