--- a/assets/css/storefront/components/_orders.scss
+++ b/assets/css/storefront/components/_orders.scss
@@ -51,6 +51,7 @@
   }
   .release {
     &__infos {
+      margin-left: 1rem;
       flex-direction: row;
       font-size: $font-size-h5;
       line-height: 24px;
