Remove reserved items

--- a/assets/css/storefront/components/_orders.scss
+++ b/assets/css/storefront/components/_orders.scss
@@ -76,6 +76,7 @@
   .delete {
     opacity: 0.7;
     font-size: $font-size-h2;
+    line-height: $font-size-h2;
     font-weight: 300;
     &:hover {
       opacity: 1;
