--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -14,7 +14,7 @@ $font-factor: 0.9;
       position: relative;
       background-color: $brand-color-green;
       border-radius: 2px;
-      display: inline-block !important;
+      display: inline-block;
       line-height: 48px;
       width: 12em;
       color: white;
